--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ header{
 	background-attachment: fixed;
 }
 nav{
+
 	width: 100%;
 	height: auto;
-	color: #fff;
+	color: #fab;
 	z-index: 999;
 }
 .upper_navbar{
